--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,12 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>팀원들과의 의사소통을 가장 중요시하며 Android 개발을 직무로
+                         삼고있는 회사원 <br>‘김신환’</br> 입니다. 개인이 하고 싶은 개발 보다는
+                         기업에 이익이 되는 개발을 하고 있습니다.
+                         또한 개발 내용을 문서화 하는 것을 중요시하며 문서화에 능통합니다.
+                         제 능력의 한계를 두지 않으며 언제든 새로운 영역을 탐구할,
+                         개척할 준비가 되어 있습니다.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
