--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "개발자 김신환의 이력서"
+description: "개발자 김신환의 이력서입니다."
 
 # Build settings
 markdown: kramdown
@@ -23,11 +23,11 @@ resume_contact_address:         "..."
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>팀원들과의 의사소통을 가장 중요시하며 Android 개발을 직무로
-                         삼고있는 회사원 <b><i>‘김신환’</i></b> 입니다. 개인이 하고 싶은 개발 보다는
-                         기업에 이익이 되는 개발을 하고 있습니다.
-                         또한 개발 내용을 문서화 하는 것을 중요시하며 문서화에 능통합니다.
-                         제 능력의 한계를 두지 않으며 언제든 새로운 영역을 탐구할,
+resume_header_intro: "<p>팀원들과의 <strong>의사소통</strong>을 가장 중요시하며 Android 개발을 직무로
+                         삼고있는 회사원 <strong><i>‘김신환’</i></strong> 입니다. 개인이 하고 싶은 개발 보다는
+                         <strong>기업에 이익이 되는 개발</strong>을 하고 있습니다.
+                         또한 개발 내용을 문서화 하는 것을 중요시하며 <strong>문서화에 능통</strong>합니다.
+                         제 <strong>능력의 한계를 두지 않으며</strong> 언제든 새로운 영역을 탐구할,
                          개척할 준비가 되어 있습니다.</p>"
 
 # use "yes" to display the email contact button,
@@ -51,13 +51,13 @@ resume_section_associations:    true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/hwaniiidev"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  # resume_twitter_url:           "http://twitter.com/jglovier"
+  # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  # resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  # resume_website_url:           "http://joelglovier.com"
+  # resume_medium_url:            "https://medium.com/@jglovier"
 resume_print_social_links:      true
 
 # Design settings
