--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
 resume_section_associations:    true
+resume_section_evaluation:      true
 # resume_section_interests:       true
 
 # Resume social links
