fix/링크 색상 수정

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,9 @@
 # Jobs
 # VP of Global Communications
-- company: <a href="https://www.loplat.com/" target="_blank">로플랫</a>
+- company: <a class="glanlink" href="https://www.loplat.com/" target="_blank">로플랫</a>
   position: R&D - Android 개발자
   duration: 2020.2 &mdash; Present
-  summary: <ul class="resume-item-list" ><li>Android <a href="https://developers.loplat.com/" target="_blank">위치 인식 SDK</a>, 위치 정보 수집 SDK 개발</li><li>위치 정보 수집 크라우드 소싱 앱 <a href="https://play.google.com/store/apps/details?id=com.loplat.cashplace" target="_blank">캐시플레이스</a> 개발</li><li>사내 위치 정보 수집용 앱 <a href="https://play.google.com/store/apps/details?id=com.loplat.placemaker" target="_blank">쿡</a> / 검증용 앱 <a href="https://play.google.com/store/apps/details?id=com.loplat.appetizer" target="_blank">애피타이저 개발</a></li></ul>
+  summary: <ul class="resume-item-list" ><li>Android <a class="glanlink" href="https://developers.loplat.com/" target="_blank">위치 인식 SDK</a>, 위치 정보 수집 SDK 개발</li><li>위치 정보 수집 크라우드 소싱 앱 <a href="https://play.google.com/store/apps/details?id=com.loplat.cashplace" target="_blank">캐시플레이스</a> 개발</li><li>사내 위치 정보 수집용 앱 <a href="https://play.google.com/store/apps/details?id=com.loplat.placemaker" target="_blank">쿡</a> / 검증용 앱 <a href="https://play.google.com/store/apps/details?id=com.loplat.appetizer" target="_blank">애피타이저 개발</a></li></ul>
 
 # Director of Digital Stratgy
 #- company: United Nations Human Rights Council
